data/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: dev
    meta.helm.sh/release-namespace: k8s-demo
  creationTimestamp: "2026-01-21T17:25:31Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-demo-api
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: k8s-demo-api-0.1.0
  name: dev-k8s-demo-api
  namespace: k8s-demo
  resourceVersion: "14610"
  uid: 727913a0-4e4f-40b4-84eb-bd238a20d609
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: dev
      app.kubernetes.io/name: k8s-demo-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dev
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: k8s-demo-api
        app.kubernetes.io/version: 0.0.1
        helm.sh/chart: k8s-demo-api-0.1.0
    spec:
      containers:
      - image: k8s-demo-api:0.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: k8s-demo-api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2026-01-21T17:25:43Z"
    lastUpdateTime: "2026-01-21T17:25:43Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-01-21T17:25:31Z"
    lastUpdateTime: "2026-01-21T17:25:43Z"
    message: ReplicaSet "dev-k8s-demo-api-55d6c7d897" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
