data/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: dev
    meta.helm.sh/release-namespace: k8s-demo
  creationTimestamp: "2026-01-21T17:25:31Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-demo-backend
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: k8s-demo-backend-0.1.0
  name: dev-k8s-demo-backend
  namespace: k8s-demo
  resourceVersion: "14619"
  uid: 0717aeb5-6d60-415a-b37e-344a2ef443ba
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: dev
      app.kubernetes.io/name: k8s-demo-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dev
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: k8s-demo-backend
        app.kubernetes.io/version: 0.0.1
        helm.sh/chart: k8s-demo-backend-0.1.0
    spec:
      containers:
      - image: k8s-demo-backend:0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: k8s-demo-backend
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2026-01-21T17:25:44Z"
    lastUpdateTime: "2026-01-21T17:25:44Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-01-21T17:25:31Z"
    lastUpdateTime: "2026-01-21T17:25:44Z"
    message: ReplicaSet "dev-k8s-demo-backend-754f55554c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
