data/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: dev
    meta.helm.sh/release-namespace: k8s-demo
  creationTimestamp: "2026-01-21T17:25:31Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-demo
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: k8s-demo-0.1.0
  name: dev-k8s-demo
  namespace: k8s-demo
  resourceVersion: "14644"
  uid: b99edb4e-c89c-426b-9c0d-e52b856b3419
spec:
  ingressClassName: nginx
  rules:
  - host: demok.here
    http:
      paths:
      - backend:
          service:
            name: dev-k8s-demo-api
            port:
              number: 8080
        path: /test
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
