data/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: dev
    meta.helm.sh/release-namespace: k8s-demo
  creationTimestamp: "2026-01-21T17:25:31Z"
  labels:
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-demo-api
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: k8s-demo-api-0.1.0
  name: dev-k8s-demo-api
  namespace: k8s-demo
  resourceVersion: "14492"
  uid: 27c0829a-0688-4976-bc96-8bf273551385
spec:
  clusterIP: 10.109.169.227
  clusterIPs:
  - 10.109.169.227
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: k8s-demo-api
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: dev
    app.kubernetes.io/name: k8s-demo-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
