data/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: dev
    meta.helm.sh/release-namespace: k8s-demo
  creationTimestamp: "2026-01-21T17:25:31Z"
  labels:
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-demo-backend
    app.kubernetes.io/version: 0.0.1
    helm.sh/chart: k8s-demo-backend-0.1.0
  name: dev-k8s-demo-backend
  namespace: k8s-demo
  resourceVersion: "14489"
  uid: fa3cb5dc-c6a6-446a-b0b6-52f727dceaf6
spec:
  clusterIP: 10.108.223.229
  clusterIPs:
  - 10.108.223.229
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: k8s-demo-backend
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: dev
    app.kubernetes.io/name: k8s-demo-backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
